URLEncoder.encode(String, Charset) was introduced in Java 10, add associated workaround code and comments (so we remember to simplify when Codehaus Cargo is on Java 10+)